// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`19518.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const t = html\`
  <ol>
    \${items.map(
      (entry) => html\`
        <li>
          \${entry.children
            ? html\`
                <ol>
                  \${entry.children.map(
                    (child) => html\`<li>\${child.title}</li>\`,
                  )}
                </ol>
              \`
            : entry.title}
        </li>
      \`,
    )}
  </ol>
\`;

export function foo() {
  return html\`
    <div>
              <pre>\${JSON.stringify({
                  a: 1,
                  b: 2,
                })}</pre>
    </div>
  \`;
}

const a = html\`
          \${{
              c: y,
          }}
\`;

=====================================output=====================================
const t = html\`
  <ol>
    \${items.map(
      (entry) => html\`
        <li>
          \${
            entry.children
              ? html\`
                  <ol>
                    \${entry.children.map(
                      (child) => html\`<li>\${child.title}</li>\`,
                    )}
                  </ol>
                \`
              : entry.title
          }
        </li>
      \`,
    )}
  </ol>
\`;

export function foo() {
  return html\`
    <div>
      <pre>
\${JSON.stringify({
          a: 1,
          b: 2,
        })}</pre>
    </div>
  \`;
}

const a = html\`
  \${{
    c: y,
  }}
\`;

================================================================================
`;

exports[`indention.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
_ = \`
  line
                  \${
                    a
                    // comment
                    + b}
  line
\`;

_ = String.raw\`
  line
                  \${
                    a
                    // comment
                    + b}
  line
\`;

_ =  css\`
  a{
    color:
                  \${
                    a
                    // comment
                    + b}
    ;
  }
\`;

_ =  html\`
  <div>
                  \${
                    a
                    // comment
                    + b}
  </div>
\`;

_ =  gql\`

                  \${
                    a
                    // comment
                    + b}

\`;

=====================================output=====================================
_ = \`
  line
                  \${
                    a +
                    // comment
                    b
                  }
  line
\`;

_ = String.raw\`
  line
                  \${
                    a +
                    // comment
                    b
                  }
  line
\`;

_ = css\`
  a {
    color: \${
      a +
      // comment
      b
    };
  }
\`;

_ = html\`
  <div>
    \${
      a +
      // comment
      b
    }
  </div>
\`;

_ = gql\`
  \${
    a +
    // comment
    b
  }
\`;

================================================================================
`;

exports[`indention-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
_ = html\`
  <div>
                      \${
                        a + //
                        b
                      }
  </div>
  <div><div><div><div>
                      \${
                        a + //
                        b
                      }
  </div></div></div></div>
\`

=====================================output=====================================
_ = html\`
  <div>
    \${
      a + //
      b
    }
  </div>
  <div>
    <div>
      <div>
        <div>
          \${
            a + //
            b
          }
        </div>
      </div>
    </div>
  </div>
\`;

================================================================================
`;
